--- a/CredentialManager.dproj
+++ b/CredentialManager.dproj
@@ -117,6 +117,10 @@
         <DCCReference Include="DesignIDE.dcp"/>
         <DCCReference Include="CredMgr.dcp"/>
         <DCCReference Include="pCredentialManager.pas"/>
+        <RcItem Include="Graphics\Login-01.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TGetCredentials</ResourceId>
+        </RcItem>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
